fix: Remove margin-top from media player icon for better alignment

--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -54,7 +54,6 @@
 }
 
 .media-player-icon {
-    margin-top: 8px;
     margin-left: 4px;
     margin-right: 8px;
 }
